--- a/assignments/assignment02/ProjectEuler4.ipynb
+++ b/assignments/assignment02/ProjectEuler4.ipynb
@@ -6,7 +6,7 @@
     "nbgrader": {}
    },
    "source": [
-    "# Project Euler: Problem 1"
+    "# Project Euler: Problem 4"
    ]
   },
   {
@@ -15,45 +15,11 @@
     "nbgrader": {}
    },
    "source": [
-    "If we list all the natural numbers below 10 that are multiples of 3 or 5, we get 3, 5, 6 and 9. The sum of these multiples is 23.\n",
+    "https://projecteuler.net/problem=4\n",
     "\n",
-    "Find the sum of all the multiples of 3 or 5 below 1000."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false,
-    "deletable": false,
-    "nbgrader": {
-     "checksum": "6cff4e8e53b15273846c3aecaea84a3d",
-     "solution": true
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "233168\n"
-     ]
-    }
-   ],
-   "source": [
-    "# YOUR CODE HERE - James Amarel told me that print needed to be print() because this isn't python 2\n",
-    "total = 0\n",
-    "for i in range(1000):\n",
-    "    if i % 3 == 0 or i % 5 == 0:\n",
-    "        total = total + i\n",
-    "print(total)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Okay so basically i did a for loop running through an array i created containing 1000 members (range(1000)). I did if statements to check whether a given number is divisible by 3 or 5 by checking if its modulus with 3 or 5 returned 0, then summed over all such values satisfying these requirements."
+    "A palindromic number reads the same both ways. The largest palindrome made from the product of two 2-digit numbers is 9009 = 91 × 99.\n",
+    "\n",
+    "Find the largest palindrome made from the product of two 3-digit numbers."
    ]
   },
   {
@@ -63,9 +29,26 @@
     "collapsed": true,
     "deletable": false,
     "nbgrader": {
-     "checksum": "6e498cbe102f8b3c1bc4ebd777bcc952",
+     "checksum": "6cff4e8e53b15273846c3aecaea84a3d",
+     "solution": true
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# YOUR CODE HERE\n",
+    "raise NotImplementedError()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": false,
+    "nbgrader": {
+     "checksum": "aff23ddd30b5712efa3907cd1608bcf5",
      "grade": true,
-     "grade_id": "projecteuler1",
+     "grade_id": "projecteuler4",
      "points": 10
     }
    },
