--- a/assignments/assignment02/ProjectEuler2.ipynb
+++ b/assignments/assignment02/ProjectEuler2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -33,15 +33,50 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is the Fibonacci sequence whose last value is less than 4 million...\n",
+      "\n",
+      "[0, 1, 1, 2, 3, 5, 8, 13, 21, 34, 55, 89, 144, 233, 377, 610, 987, 1597, 2584, 4181, 6765, 10946, 17711, 28657, 46368, 75025, 121393, 196418, 317811, 514229, 832040, 1346269, 2178309, 3524578]\n",
+      "\n",
+      "The sum of even valued Fibonacci Numbers whose values do not exceed four million and are also even is...\n",
+      "\n",
+      "4613732\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "start = [0,1]\n",
+    "a = start[0]\n",
+    "b = start[1]\n",
+    "while 1 == 1:\n",
+    "    start.append(a+b)\n",
+    "    a = start[len(start)-2]\n",
+    "    b = start[len(start)-1]\n",
+    "    if b > 4000000:\n",
+    "        del(start[len(start)-1])\n",
+    "        break\n",
+    "print(\"Here is the Fibonacci sequence whose last value is less than 4 million...\")\n",
+    "print('')\n",
+    "print(start)\n",
+    "print('')\n",
+    "def sum_even(list):\n",
+    "    total = 0\n",
+    "    for i in list:\n",
+    "        if i % 2 == 0:\n",
+    "            total = total + i\n",
+    "    return total\n",
+    "print(\"The sum of even valued Fibonacci Numbers whose values do not exceed four million and are also even is...\")\n",
+    "print('')\n",
+    "print(sum_even(start))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -56,6 +91,15 @@
    "source": [
     "# This cell will be used for grading, leave it at the end of the notebook."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
