--- a/assignments/assignment02/ProjectEuler2.ipynb
+++ b/assignments/assignment02/ProjectEuler2.ipynb
@@ -52,6 +52,7 @@
     "start = [0,1]\n",
     "a = start[0]\n",
     "b = start[1]\n",
+    "#this block appends the sum of the last two terms to start[], the first 2 numbers\n",
     "while 1 == 1:\n",
     "    start.append(a+b)\n",
     "    a = start[len(start)-2]\n",
@@ -63,6 +64,7 @@
     "print('')\n",
     "print(start)\n",
     "print('')\n",
+    "#this block sums over even valued fibonacci numbers\n",
     "def sum_even(list):\n",
     "    total = 0\n",
     "    for i in list:\n",
