--- a/assignments/assignment02/ProjectEuler4.ipynb
+++ b/assignments/assignment02/ProjectEuler4.ipynb
@@ -24,24 +24,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "6cff4e8e53b15273846c3aecaea84a3d",
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest palindrome made from the product of two 3-digit numbers is 906609\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "candidate = []\n",
+    "sortedCan = []\n",
+    "#simply checks to see if a string is equivalent to the string written backwards\n",
+    "def is_Pal(num):\n",
+    "    if str(num) == str(num)[::-1]:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "#ranges over 1000 possible values for i and k\n",
+    "for i in range(999):\n",
+    "    for k in range(999):\n",
+    "        if is_Pal(i*k):\n",
+    "            candidate.append(i*k)\n",
+    "#turns the list of candidates into a set, so i can sort it\n",
+    "for f in sorted(set(candidate)):\n",
+    "    sortedCan.append(f)\n",
+    "#because list was sorted into a set, i can simply pop out the last value, which will now be the highest\n",
+    "max = sortedCan.pop()\n",
+    "print(\"The largest palindrome made from the product of two 3-digit numbers is\",max)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -56,6 +81,15 @@
    "source": [
     "# This cell will be used for grading, leave it at the end of the notebook."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
