--- a/assignments/assignment02/ProjectEuler59.ipynb
+++ b/assignments/assignment02/ProjectEuler59.ipynb
@@ -63,19 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "nbgrader": {}
    },
    "outputs": [],
    "source": [
-    "from itertools"
+    "from itertools import permutations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -84,15 +84,107 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(The Gospel of John, chapter 1) 1 In the beginning the Word already existed. He was with God, and he was God. 2 He was in the beginning with God. 3 He created everything there is. Nothing exists that he didn't make. 4 Life itself was in him, and this life gives light to everyone. 5 The light shines through the darkness, and the darkness can never extinguish it. 6 God sent John the Baptist 7 to tell everyone about the light so that everyone might believe because of his testimony. 8 John himself was not the light; he was only a witness to the light. 9 The one who is the true light, who gives light to everyone, was going to come into the world. 10 But although the world was made through him, the world didn't recognize him when he came. 11 Even in his own land and among his own people, he was not accepted. 12 But to all who believed him and accepted him, he gave the right to become children of God. 13 They are reborn! This is not a physical birth resulting from human passion or plan, this rebirth comes from God.14 So the Word became human and lived here on earth among us. He was full of unfailing love and faithfulness. And we have seen his glory, the glory of the only Son of the Father.\n",
+      "(The Gospel of John, chapter 1) 1 In the beginning the Word already existed. He was with God, and he was God. 2 He was in the beginning with God. 3 He created everything there is. Nothing exists that he didn't make. 4 Life itself was in him, and this life gives light to everyone. 5 The light shines through the darkness, and the darkness can never extinguish it. 6 God sent John the Baptist 7 to tell everyone about the light so that everyone might believe because of his testimony. 8 John himself was not the light; he was only a witness to the light. 9 The one who is the true light, who gives light to everyone, was going to come into the world. 10 But although the world was made through him, the world didn't recognize him when he came. 11 Even in his own land and among his own people, he was not accepted. 12 But to all who believed him and accepted him, he gave the right to become children of God. 13 They are reborn! This is not a physical birth resulting from human passion or plan, this rebirth comes from God.14 So the Word became human and lived here on earth among us. He was full of unfailing love and faithfulness. And we have seen his glory, the glory of the only Son of the Father.\n",
+      "107359\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "f = open(\"cipher.txt\")\n",
+    "string = f.read()\n",
+    "intlist = []\n",
+    "#opens the list and splits the long string into \n",
+    "for i in string.split(\",\"):\n",
+    "    intlist.append(i)\n",
+    "key = list(permutations('abcdefghijklmnopqrstuvwxyz', 3))\n",
+    "#breaks list of cipher into 3 lists, every other 3\n",
+    "# this will make is so that key[0] operates on list1, key[1] on list2, etc.\n",
+    "list1 = intlist[::3]\n",
+    "list2 = intlist[1::3]\n",
+    "list3 = intlist[2::3]\n",
+    "\n",
+    "intlist1 = []\n",
+    "intlist2 = []\n",
+    "intlist3 = []\n",
+    "\n",
+    "for i in list1:\n",
+    "    intlist1.append(int(i))\n",
+    "for i in list2:\n",
+    "    intlist2.append(int(i))\n",
+    "for i in list3:\n",
+    "    intlist3.append(int(i))\n",
+    "#these are the functions that decrypt my lists. notice how each list gets its own function,\n",
+    "#and within the list the element of the key that is chosen to operate on the list is a single value\n",
+    "def decrypt1(intlist1,key):\n",
+    "    decryptlist1 = []\n",
+    "    for i in intlist1:\n",
+    "        decryptlist1.append(i^ord(key[0]))\n",
+    "    return decryptlist1\n",
+    "\n",
+    "def decrypt2(intlist2,key):\n",
+    "    decryptlist2 = []\n",
+    "    for i in intlist2:\n",
+    "        decryptlist2.append(i^ord(key[1]))\n",
+    "    return decryptlist2\n",
+    "\n",
+    "def decrypt3(intlist3,key):\n",
+    "    decryptlist3 = []\n",
+    "    for i in intlist3:\n",
+    "        decryptlist3.append(i^ord(key[2]))\n",
+    "    return decryptlist3\n",
+    "#checks to see if the thing passed to the function is in the set of english letters and some punctuation\n",
+    "#Prof suggested I search for words like \" the \" because the rest should return gibberish\n",
+    "def isLetter(thing):\n",
+    "    if \" the \" in thing:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "def assemble(intlist1,intlist2,intlist3,key):\n",
+    "    newlist = []\n",
+    "    a = 0\n",
+    "    intlist1conv = decrypt1(intlist1,key)\n",
+    "    intlist2conv = decrypt2(intlist2,key)\n",
+    "    intlist3conv = decrypt3(intlist3,key)\n",
+    "    while a < len(intlist1conv):\n",
+    "        newlist.append(intlist1conv[a])\n",
+    "        if a >= len(intlist2conv):\n",
+    "            return newlist\n",
+    "        else:\n",
+    "            newlist.append(intlist2conv[a])\n",
+    "        if a >= len(intlist3conv):\n",
+    "            return newlist\n",
+    "        else:\n",
+    "            newlist.append(intlist3conv[a])\n",
+    "            a+=1\n",
+    "    return newlist\n",
+    "for i in key:\n",
+    "    newlist = assemble(intlist1,intlist2,intlist3,i)\n",
+    "    newthing = []\n",
+    "    for i in newlist:\n",
+    "        newthing.append(chr(i))\n",
+    "    message = ''\n",
+    "    for i in newthing:\n",
+    "        message += i\n",
+    "    if isLetter(message) == True:\n",
+    "        print(message)\n",
+    "        newmessage = message\n",
+    "also = 0\n",
+    "print(newmessage)\n",
+    "for i in newmessage:\n",
+    "    also = also + ord(i)\n",
+    "print(also)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -107,6 +199,32 @@
    "source": [
     "# This cell will be used for grading, leave it at the end of the notebook."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
