--- a/assignments/assignment02/ProjectEuler6.ipynb
+++ b/assignments/assignment02/ProjectEuler6.ipynb
@@ -30,19 +30,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "6cff4e8e53b15273846c3aecaea84a3d",
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The difference between the sum of squares from 1 to 100 and the square of sums over the samae inteveral is 25164150\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#returns the square of a sum of numbers from 0 to i\n",
+    "def square_sum(i):\n",
+    "    num = 0\n",
+    "    total = 0\n",
+    "    for num in range(i):\n",
+    "        num += 1\n",
+    "        total = total + num\n",
+    "    return total**2\n",
+    "#returns the sum of squares of numbers from 0 to i\n",
+    "def sum_square(i):\n",
+    "    num = 0\n",
+    "    total = 0\n",
+    "    for num in range(i):\n",
+    "        num += 1\n",
+    "        total += num**2\n",
+    "    return total\n",
+    "#prints the difference of the previous quantities\n",
+    "print(\"The difference between the sum of squares from 1 to 100 and the square of sums over the same inteveral is\",square_sum(100)-sum_square(100))"
    ]
   },
   {
