--- a/assignments/assignment02/ProjectEuler9.ipynb
+++ b/assignments/assignment02/ProjectEuler9.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "6cff4e8e53b15273846c3aecaea84a3d",
@@ -39,8 +39,25 @@
    },
    "outputs": [],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "#checks to see if Pythagorean \n",
+    "def is_PT(a,b,c):\n",
+    "    if a**2 + b**2 == c**2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "#checks to see if numbers sum to 1000    \n",
+    "def is_sum_1000(a,b,c):\n",
+    "    if a + b + c == 1000:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "#iterates over 1000 possible values for both a, b, and c and prints the product of a*b*c who\n",
+    "# satisfies is_sum_1000 and is_PT\n",
+    "for i in range(1000):\n",
+    "    for k in range(1000):\n",
+    "        for l in range(1000):\n",
+    "            if is_PT(i,k,l) == True and is_sum_1000(i,k,l) == True:\n",
+    "                print(\"The product of the Pythagorean triplet whose sum is 1000 is\", i*k*l)"
    ]
   },
   {
