--- a/assignments/assignment02/ProjectEuler4.ipynb
+++ b/assignments/assignment02/ProjectEuler4.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -33,7 +33,15 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest palindrome made from the product of two 3-digit numbers is 906609\n"
+     ]
+    }
+   ],
    "source": [
     "candidate = []\n",
     "sortedCan = []\n",
@@ -89,18 +97,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.4.0"
   }
  },
  "nbformat": 4,
