--- a/assignments/assignment03/ProjectEuler8.ipynb
+++ b/assignments/assignment03/ProjectEuler8.ipynb
@@ -98,7 +98,8 @@
     "    b = a[i:i+13]\n",
     "    c = b.prod()\n",
     "    prod.append(c)\n",
-    "thing = np.array(prod)\n",
+    "thing = np.array(prod\n",
+    "                )\n",
     "print(thing.max())"
    ]
   },
